# mrzamboni-quick-hack-code

./: README.md  env.sh  setup.bash  setup.sh  setup.zsh
ca_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
ca_driver/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ca_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
ca_tools/: .catkin  .rosinstall  local_setup.sh  setup.sh
create_autonomy/: .catkin  .rosinstall  local_setup.sh  setup.sh
cv_bridge/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
image_geometry/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
jetson_cam/: .catkin  .rosinstall  CMakeLists.txt  CMakeLists.txt.org  _setup_util.py  local_setup.sh  package.xml  setup.py  setup.sh
jetson_cam_usb/: .catkin  .rosinstall  local_setup.sh  setup.sh
jetson_raspcam/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  (+1 more)
mrinfer/: .catkin  .rosinstall  CMakeLists.txt  _setup_util.py  local_setup.sh  package.xml  setup.py  setup.sh
mrinfer/include/mrinfer/: InferResults.h  InferResultsArray.h
mrinfer/share/common-lisp/ros/mrinfer/msg/: InferResults.lisp  InferResultsArray.lisp  _package.lisp  _package_InferResults.lisp  _package_InferResultsArray.lisp  mrinfer-msg.asd
mrinfer/share/gennodejs/ros/mrinfer/msg/: InferResults.js  InferResultsArray.js  _index.js
mrinfer/share/mrinfer/cmake/: mrinfer-msg-extras.cmake  mrinfer-msg-paths.cmake  mrinferConfig.cmake
mrinfer/share/roseus/ros/mrinfer/: manifest.l
mrinfer/share/roseus/ros/mrinfer/msg/: InferResults.l  InferResultsArray.l
(+70 files in other folders)
